--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ bower_components
 # dotenv environment variable files
 .env
 .env.test
+.test.env
 
 # Gatsby files
 .cache/
@@ -65,3 +66,7 @@ build/Release
 # Temporary files
 tmp/
 temp/
+dist/
+
+# Pakacages
+package-lock.json
